# bruton-fam-hub

./: .gitignore  Makefile  README.md
backend/: Dockerfile  README.md  family_hub.db  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py
backend/tests/: test_health.py
docs/: architecture.md
frontend/: .eslintrc.cjs  Dockerfile  README.md  components.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/public/: manifest.webmanifest
frontend/src/: App.js  App.tsx  main.js  main.tsx  ws.js  ws.ts
frontend/src/components/dashboard/: EventForm.js  EventForm.tsx  EventTimeline.js  EventTimeline.tsx  StatCard.js  StatCard.tsx
frontend/src/components/ui/: button.js  button.tsx
frontend/src/config/: env.js  env.ts
frontend/src/hooks/: useEvents.js  useEvents.ts  useWebSocket.js  useWebSocket.ts
frontend/src/lib/: api.js  api.ts
frontend/src/routes/: router.js
frontend/src/styles/: globals.css
frontend/src/types/: event.ts
infra/: Caddyfile  docker-compose.yml  env.example
ops/backups/: README.md
scripts/: backup.sh  bootstrap.sh
