[project]
name = "bruton-fam-hub-backend"
version = "0.1.0"
description = "FastAPI backend for the Bruton family hub"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Bruton Family" }]
dependencies = [
    "fastapi[standard]>=0.109",
    "uvicorn[standard]>=0.24",
    "pydantic-settings>=2.2",
    "sqlalchemy[asyncio]>=2.0",
    "sqlmodel>=0.0.14",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.1",
    "aiosqlite>=0.19",
    "alembic>=1.12",
    "redis[hiredis]>=5.0",
    "passlib[bcrypt]>=1.7",
    "pyjwt>=2.8",
    "python-multipart>=0.0.6",
    "httpx>=0.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "ruff>=0.2",
    "mypy>=1.8",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
